--- a/config/i18n-tasks.yml
+++ b/config/i18n-tasks.yml
@@ -57,7 +57,7 @@ search:
   #   - app/helpers
   #   - app/mailers
   #   - app/presenters
-    
+
 
   ## Files or `File.fnmatch` patterns to exclude from search. Some files are always excluded regardless of this setting:
   ##   %w(*.jpg *.png *.gif *.svg *.ico *.eot *.otf *.ttf *.woff *.woff2 *.pdf *.css *.sass *.scss *.less *.yml *.json)
@@ -99,6 +99,10 @@ ignore_unused:
   - 'event_types.*'
   - 'idv.errors.pattern_mismatch.*'
   - 'zxcvbn.*'
+  - 'instructions.2fa.{sms,voice}.fallback_html'
+  - 'links.phone_confirmation.fallback_to_{sms,authenticator,voice}_html'
+  - 'links.two_factor_authentication.resend_code.{sms,voice}_html'
+  - 'links.two_factor_authentication.{sms,voice}_html'
 # - 'simple_form.{yes,no}'
 # - 'simple_form.{placeholders,hints,labels}.*'
 # - 'simple_form.{error_notification,required}.:'
